# sheathe

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  deny.toml  justfile  rust-toolchain.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
corpus/: checksums.sha256  fetch.sh  manifest.toml
crates/sheathe/: Cargo.toml  README.md
crates/sheathe-cli/: Cargo.toml  README.md  build.rs
crates/sheathe-cli/src/: banner.rs  lib.rs  main.rs
crates/sheathe-core/: Cargo.toml  README.md
crates/sheathe-core/src/: error.rs  lib.rs  sample.rs  stream.rs  time.rs
crates/sheathe-crypto/: Cargo.toml  README.md
crates/sheathe-crypto/src/: lib.rs  pssh.rs
crates/sheathe-dash/: Cargo.toml  README.md
crates/sheathe-dash/src/: lib.rs
crates/sheathe-es/: Cargo.toml
crates/sheathe-es/src/: demux.rs  detect.rs  lib.rs
crates/sheathe-es/tests/: demux.rs
crates/sheathe-hls/: Cargo.toml  README.md
crates/sheathe-hls/src/: lib.rs
crates/sheathe-mkv/: Cargo.toml
crates/sheathe-mkv/src/: demux.rs  ebml.rs  entries.rs  lib.rs
crates/sheathe-mkv/tests/: demux.rs
crates/sheathe-mp4/: Cargo.toml  README.md
crates/sheathe-mp4/src/: box_reader.rs  box_writer.rs  codecs.rs  demux.rs  fragmenter.rs  lib.rs  segment.rs
crates/sheathe-mp4/tests/: demux.rs  segment.rs
crates/sheathe-mp4/tests/common/: mod.rs
crates/sheathe-package/: Cargo.toml
crates/sheathe-package/src/: io.rs  lib.rs  origin.rs  scte35.rs
crates/sheathe-text/: Cargo.toml
crates/sheathe-text/src/: cea608.rs  cea708.rs  lib.rs  sei.rs  webvtt.rs
crates/sheathe-ts/: Cargo.toml  README.md
crates/sheathe-ts/src/: aac_entry.rs  ac3.rs  ac3_entry.rs  adts.rs  annexb.rs  avcc.rs  bitstream.rs  demux.rs  eac3.rs  eac3_entry.rs  elementary.rs  flac.rs  flac_entry.rs  hvcc.rs  lib.rs  mp3.rs  mp3_entry.rs  mux.rs  packet.rs  pes.rs  psi.rs
crates/sheathe-ts/tests/: demux.rs
crates/sheathe-ts/tests/common/: mod.rs
crates/sheathe/src/: main.rs
docs/: CLI.md  CONFORMANCE.md  article.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mkv_ebml.rs  mp4_box_reader.rs  ts_packet.rs
scripts/: bench_throughput.sh  oracle_corpus.sh  release.sh  shaka_oracle.sh
