[workspace]
resolver = "3"
members = [
    "crates/sheathe-core",
    "crates/sheathe-mp4",
    "crates/sheathe-dash",
    "crates/sheathe-hls",
    "crates/sheathe-crypto",
    "crates/sheathe-cli",
    "crates/sheathe",
]

# Shared package metadata, inherited by every crate via `field.workspace = true`.
# No shared `version`: each crate declares its own (template convention) so
# scripts/release.sh bumps them with a simple per-file rewrite.
[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/vbasky/sheathe"
authors = ["Vikram Bhaskaran <vikram.bhaskaran@outlook.com>"]
description = "Pure-Rust HLS/DASH/CMAF media packager (oracle: Shaka Packager)"
keywords = ["dash", "hls", "cmaf", "packager", "streaming"]
categories = ["multimedia", "multimedia::video", "command-line-utilities"]

[workspace.lints.rust]
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_extern_crates = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
# Strict by default (clippy defaults + -D warnings in CI). Relax pedantic lints
# here with an inline justification when needed.

[workspace.dependencies]
# Internal crates (path + version pin; path-first so scripts/release.sh can
# rewrite the version with a single regex).
sheathe-core = { path = "crates/sheathe-core", version = "0.2.0" }
sheathe-crypto = { path = "crates/sheathe-crypto", version = "0.2.0" }
sheathe-mp4 = { path = "crates/sheathe-mp4", version = "0.2.0" }
sheathe-dash = { path = "crates/sheathe-dash", version = "0.2.0" }
sheathe-hls = { path = "crates/sheathe-hls", version = "0.2.0" }
sheathe-cli = { path = "crates/sheathe-cli", version = "0.2.0" }

# External.
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# Pure-Rust AES block cipher (RustCrypto); CTR/CBC modes implemented in-crate.
aes = "0.9"

[profile.release]
lto = "thin"
codegen-units = 1
