[package]
name = "sheathe-cli"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI logic for the sheathe media packager (library; the binary is the `sheathe` crate)"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
sheathe-core.workspace = true
sheathe-mp4.workspace = true
sheathe-dash.workspace = true
sheathe-hls.workspace = true
sheathe-crypto.workspace = true
anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true
