[package]
name = "sheathe-cli"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust HLS/DASH/CMAF media packager"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[build-dependencies]
image.workspace = true

[dependencies]
# Packaging pipeline (demux → segment → manifest) lives in sheathe-package; the CLI
# is a thin wrapper over it.
sheathe-package.workspace = true
anyhow.workspace = true
clap.workspace = true
base64.workspace = true
crossterm.workspace = true

[lints]
workspace = true
