[package]
name = "sheathe-core"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core media model (streams, samples, timing) for the sheathe packager"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
