[package]
name = "sheathe-crypto"
version = "0.1.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common Encryption (CENC: cenc/cbcs) scaffolding for the sheathe packager"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
sheathe-core.workspace = true
aes.workspace = true

[lints]
workspace = true
