[package]
name = "sheathe-dash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MPEG-DASH MPD manifest generation for the sheathe packager"
keywords.workspace = true
categories.workspace = true

[dependencies]
sheathe-core.workspace = true
