[package]
name = "sheathe-hls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HLS master and media playlist generation for the sheathe packager"
keywords.workspace = true
categories.workspace = true

[dependencies]
sheathe-core.workspace = true
