[package]
name = "sheathe-text"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Timed-text (WebVTT/TTML) input for the sheathe packager"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
sheathe-core.workspace = true

[lints]
workspace = true
