[package]
name = "sheathe-ts"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MPEG-2 transport stream demuxer for the sheathe packager"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
sheathe-core.workspace = true

[lints]
workspace = true