[package]
name = "sheathe"
# The canonical install target: `cargo install sheathe`.
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust HLS/DASH/CMAF media packager (Shaka Packager alternative) — `sheathe` CLI"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

# Installs the `sheathe` binary.
[[bin]]
name = "sheathe"
path = "src/main.rs"

[dependencies]
sheathe-cli = { workspace = true }
anyhow.workspace = true

[lints]
workspace = true
